apps/platform/pocketid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid
  namespace: platform
  labels:
    app: pocketid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app: pocketid
    spec:
      containers:
        - name: pocketid
          image: docker.io/11notes/pocket-id:2.18.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1411
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: platform-pocketid-data
