apps/platform/pocketid/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocketid
  namespace: platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pocketid.artr.com.br`)
      kind: Rule
      services:
        - name: pocketid
          port: 3000
  tls:
    secretName: wildcard-artr-com-br-tls
